--- a/isabela-site.html
+++ b/isabela-site.html
@@ -9,7 +9,7 @@
     <div class="menu">
       <ul>
         <li><a class="home" href="#">Isabela Ventura</a></li>
-        <li><a href="#">Portifolio</a></li>
+        <li><a href="#">Portfólio</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
