--- a/isabela-site.html
+++ b/isabela-site.html
@@ -3,16 +3,24 @@
   </head>
     <meta charset = "UTF-8"/>
     <title>Isabela Ventura</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <header>
+      <div>
+        <img src="images/header-image.jpeg">
+      </div>
+    </header>
     <div class="menu">
       <ul>
-        <li><a class="home" href="#">Isabela Ventura</a></li>
+        <li><a href="#">Home</a></li>
         <li><a href="#">Portfólio</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+    </div>
+    <div>
+
     </div>
   </body>
 </html>
