--- a/isabela-site.html
+++ b/isabela-site.html
@@ -4,11 +4,12 @@
     <meta charset = "UTF-8"/>
     <title>Isabela Ventura</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <header>
       <div>
-        <img src="images/header-image.jpeg">
+        <h2>Isabela Ventura</h2>        
       </div>
     </header>
     <div class="menu">
