--- a/isabela-site.html
+++ b/isabela-site.html
@@ -1,28 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  </head>
+  <head>
     <meta charset = "UTF-8"/>
     <title>Isabela Ventura</title>
     <link rel="stylesheet" href="style.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <header>
-      <div class="header">
-        <h1>Isabela Ventura</h1>        
-      </div>
-      <div class="menu">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Portfólio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </div>
-    </header>
-    <div class="home">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc arcu elit, posuere quis consequat a, dapibus id diam. Nullam hendrerit et nisi non interdum. In venenatis, turpis eget commodo pulvinar, odio magna pellentesque tortor, eu rhoncus orci urna quis libero. Sed vel auctor dui. Integer semper ante justo, sed mattis elit feugiat sed. Cras malesuada nec elit non congue. Donec cursus ligula ac leo imperdiet vulputate. Fusce ac urna at neque dapibus scelerisque.</p>
-      <p>Mauris id tempus nisi. Proin consectetur gravida ligula vel pharetra. Duis vel laoreet lectus. Vestibulum vel tincidunt ante. Cras sagittis eu quam ut venenatis. Nam rhoncus turpis vitae neque consectetur, in ullamcorper elit porta. Morbi auctor pellentesque elit eu vulputate. Nunc nec dui sit amet nisl accumsan tincidunt. Praesent tristique mollis posuere. Duis et nisl sem. Nulla sed velit quis eros auctor molestie. Etiam posuere enim sed tortor convallis elementum. In sit amet mi ac erat dictum sodales. Sed fermentum lectus enim, nec hendrerit risus hendrerit eu. Morbi gravida risus non odio iaculis scelerisque. Curabitur placerat aliquet justo, quis consectetur nunc ultrices ut.</p>
+    <div>
+      <h1>Isabela Ventura</h1> 
     </div>
   </body>
 </html>
