--- a/isabela-site.html
+++ b/isabela-site.html
@@ -6,8 +6,18 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div>
+    <div class="logo">
       <h1>Isabela Ventura</h1> 
+    </div>
+    <div class="redes">
+      <ul>
+        <li>
+          <a href=""><img src="linkedin.jpeg"></a>
+        </li>
+        <li>
+          <a href=""><img src="github.jpeg"></a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
