colocando imagens na pasta.

--- a/isabela-site.html
+++ b/isabela-site.html
@@ -12,10 +12,10 @@
     <div class="redes">
       <ul>
         <li>
-          <a href=""><img src="linkedin.jpeg"></a>
+          <a href=""><img src="image/linkedin.jpeg"></a>
         </li>
         <li>
-          <a href=""><img src="github.jpeg"></a>
+          <a href=""><img src="image/github.jpeg"></a>
         </li>
       </ul>
     </div>
