--- a/isabela-site.html
+++ b/isabela-site.html
@@ -12,10 +12,10 @@
     <div class="redes">
       <ul>
         <li>
-          <a href=""><img src="images/linkedin.jpeg"></a>
+          <a href="http://br.linkedin.com/pub/isabela-ventura/7b/bb3/965"><img src="images/linkedin.jpeg" alt="Li"/></a>
         </li>
         <li>
-          <a href=""><img src="images/github.jpeg"></a>
+          <a href="https://github.com/IsabelaVentura"><img src="images/github.jpeg" alt="Github"/></a>
         </li>
       </ul>
     </div>
