adicionando a div sobre

--- a/isabela-site.html
+++ b/isabela-site.html
@@ -12,12 +12,15 @@
     <div class="redes">
       <ul>
         <li>
-          <a href="http://br.linkedin.com/pub/isabela-ventura/7b/bb3/965"><img src="images/linkedin.jpeg" alt="Li"/></a>
+          <a href="http://br.linkedin.com/pub/isabela-ventura/7b/bb3/965"><img src="images/linkedin.jpeg" alt="Linkedin"/></a>
         </li>
         <li>
           <a href="https://github.com/IsabelaVentura"><img src="images/github.jpeg" alt="Github"/></a>
         </li>
       </ul>
+    </div>
+    <div class="sobre">
+      <p>Estou começando na area de desenvolvimento front-end e estou adorando</p>
     </div>
   </body>
 </html>
