--- a/isabela-site.html
+++ b/isabela-site.html
@@ -4,10 +4,11 @@
     <meta charset = "UTF-8"/>
     <title>Isabela Ventura</title>
     <link rel="stylesheet" href="style.css"/>
+    <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="logo">
-      <h1>Isabela Ventura</h1> 
+      <h1>Isabela Ventura</h1>
     </div>
     <div class="redes">
       <ul>
