--- a/isabela-site.html
+++ b/isabela-site.html
@@ -4,7 +4,7 @@
     <meta charset = "UTF-8"/>
     <title>Isabela Ventura</title>
     <link rel="stylesheet" href="style.css"/>
-    <link href='http://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Telex|Belleza' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="logo">
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div class="sobre">
-      <p>Estou começando na area de desenvolvimento front-end e estou adorando</p>
+      <p>Tenho 17 anos, sou paulista e estou começando a entrar na área de desenvolvimento front-end. Atualmente tenho noções sobre HTML5 e CSS3.</p>
     </div>
   </body>
 </html>
