Adicionando uma div conteiner

--- a/isabela-site.html
+++ b/isabela-site.html
@@ -7,21 +7,23 @@
     <link href='http://fonts.googleapis.com/css?family=Telex|Belleza' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <div class="logo">
-      <h1>Isabela Ventura</h1>
-    </div>
-    <div class="redes">
-      <ul>
-        <li>
-          <a href="http://br.linkedin.com/pub/isabela-ventura/7b/bb3/965"><img src="images/linkedin.jpeg" alt="Linkedin"/></a>
-        </li>
-        <li>
-          <a href="https://github.com/IsabelaVentura"><img src="images/github.jpeg" alt="Github"/></a>
-        </li>
-      </ul>
-    </div>
-    <div class="sobre">
-      <p>Tenho 17 anos, sou paulista e estou começando a entrar na área de desenvolvimento front-end. Atualmente tenho noções sobre HTML5 e CSS3.</p>
+    <div class="container">
+      <div class="logo">
+        <h1>Isabela Ventura</h1>
+      </div>
+      <div class="redes">
+        <ul>
+          <li>
+            <a href="http://br.linkedin.com/pub/isabela-ventura/7b/bb3/965"><img src="images/linkedin.jpeg" alt="Linkedin"/></a>
+          </li>
+          <li>
+            <a href="https://github.com/IsabelaVentura"><img src="images/github.jpeg" alt="Github"/></a>
+          </li>
+        </ul>
+      </div>
+      <div class="sobre">
+        <p>Tenho 17 anos, paulista, sempre buscando aprimorar minhas habilidades em Desenvolvimento de Interfaces Web(Front End Development), possuo conhecimentos em HTML5 e CSS3. Caso queira saber mais sobre meu trabalho não exite em me contactar ou checar minhas redes sociais.</p>
+      </div>
     </div>
   </body>
 </html>
