Arrumando alguns detalhes

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </ul>
       </div>
       <div class="sobre">
-        <p>Tenho 17 anos, paulista, sempre buscando aprimorar minhas habilidades em Desenvolvimento de Interfaces Web(Front End Development), possuo conhecimentos em HTML5 e CSS3. Caso queira saber mais sobre meu trabalho não exite em me contactar ou checar minhas redes sociais.</p>
+        <p>Tenho 17 anos, paulista, sempre buscando aprimorar minhas habilidades em Desenvolvimento de Interfaces Web(Front End Development), possuo conhecimentos em HTML5 e CSS3. Caso queira saber mais sobre meu trabalho não hesite em me contactar ou checar minhas redes sociais.</p>
       </div>
     </div>
   </body>
